fix some wonky alignment issues

--- a/challenge/public/styles.css
+++ b/challenge/public/styles.css
@@ -31,6 +31,11 @@ ul li.active {
   background-color:#D8784C ;
 }
 
- .Signs, td, th {
+.Signs, td, th {
   border: 1px solid black;
+}
+
+.Signs {
+  margin-left: auto;
+  margin-right: auto;
 }
